# clone-repos

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
clone_repos/: __main__.py  repo.py
tests/: clone-repos.yaml  pipefail.yaml  test_clone_repos.py
